--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,11 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-        
-    - uses: actions/checkout@v2
+    
+    - name: Checkout target branch
+      uses: actions/checkout@v2
       with: 
         ref: ${{ github.event.pull_request.head.sha }}
-    - name: Checkout target branch
     
     - name: Execute code analysis
       run: ./CodeAnalyzer/start.sh
