--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,10 +17,18 @@ jobs:
 
     - name: Checkout target branch
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
-    - name: List Files
+    - name: Check diff
+      id: git-diff
+      env:
+        EXCLUDE_OPTS: SC2086,SC2001
       run: |
-        ls -al
+        git diff origin/${GITHUB_BASE_REF}...origin/${GITHUB_HEAD_REF} \
+          --diff-filter=AM \
+          --name-only -- '*.cs$'
+
 
     # - name: Execute code analysis
     #   run: ./CodeAnalyzer/start.sh
