--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,10 +28,10 @@ jobs:
         git diff origin/${GITHUB_BASE_REF}...origin/${GITHUB_HEAD_REF} \
           --diff-filter=AM \
           --name-only -- '*.cs' \
-          | sed -e "s/ /,/g"
+
     - name: Output Result
       run: |
-        echo ${{ steps.git-diff.outputs }}
+        echo ${{ steps.git-diff.outputs | sed -e "s/ /,/g" }}
       if: steps.git-diff.outputs
 
     # - name: Execute code analysis
