--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Output Result
       run: |
-        echo ${{ steps.git-diff.outputs | sed -e "s/ /,/g" }}
+        echo ${{ steps.git-diff.outputs }} | sed -e "s/ /,/g" 
       if: steps.git-diff.outputs
 
     # - name: Execute code analysis
