--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
       env:
         EXCLUDE_OPTS: SC2086,SC2001
       run: |
-        git rev-parse --show-toplevel
+        git config --global alias.root 'rev-parse --show-toplevel'
         git diff origin/${GITHUB_BASE_REF}...origin/${GITHUB_HEAD_REF} \
           --diff-filter=AM \
           --name-only -- '*.cs'
