--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Setup .NET
@@ -35,6 +35,6 @@ jobs:
 
 
     - name: Execute code analysis
-      run: | 
+      run: |
         ls -al CodeAnalyzer
         ./CodeAnalyzer/start.sh origin/${GITHUB_BASE_REF} origin/${GITHUB_HEAD_REF}
