--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,4 +37,5 @@ jobs:
     - name: Execute code analysis
       run: | 
         ls -al CodeAnalyzer
-        ./CodeAnalyzer/start.sh origin/${GITHUB_BASE_REF} origin/${GITHUB_HEAD_REF}
+        dotnet ./CodeAnalyzer/CoreTest.dll
+        # ./CodeAnalyzer/start.sh origin/${GITHUB_BASE_REF} origin/${GITHUB_HEAD_REF}
