--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Checkout target branch
       uses: actions/checkout@v2
       with:
+        path: ./
         fetch-depth: 0
 
     # - name: Check diff
