--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: ./
+        lfs: true
         fetch-depth: 0
 
     # - name: Check diff
