--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,10 @@ jobs:
     #  with:
     #    dotnet-version: 3.1.x
 
+    - name: Install LFS
+      run: |
+        git lfs install --system --skip-repo
+    
     - name: Checkout target branch
       uses: actions/checkout@v2
       with:
