--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,6 +42,4 @@ jobs:
 
     - name: Execute code analysis
       run: | 
-        ls .\CodeAnalyzer\
-        dotnet ./CodeAnalyzer/CoreTest.dll
-        # ./CodeAnalyzer/start.sh origin/${GITHUB_BASE_REF} origin/${GITHUB_HEAD_REF}
+        ./CodeAnalyzer/start.sh origin/${GITHUB_BASE_REF} origin/${GITHUB_HEAD_REF}
