--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-
+      if: false == "command -v dotnet &> /dev/null"
     - name: Install LFS
       run: |
         git lfs install --system --skip-repo
