--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
+    #- name: Setup .NET
+    #  uses: actions/setup-dotnet@v1
+    #  with:
+    #    dotnet-version: 5.0.x
 
-    - name: Install LFS
-      run: |
-        git lfs install --system --skip-repo
+    #- name: Install LFS
+    #  run: |
+    #    git lfs install --system --skip-repo
     
     - name: Checkout target branch
       uses: actions/checkout@v2
